# jupyterlab-skip-traceback

./: .gitignore  .prettierignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  install.json  package.json  pyproject.toml  setup.py
.github/workflows/: build.yml  test_node12.yml  test_node14.yml
binder/: environment.yml  postBuild
jupyterlab-skip-traceback/: _version.py
jupyterlab_skip_traceback/: __init__.py
notebooks/: index.ipynb
schema/: settings.json
src/: SkipTracebackWidget.ts  index.ts
style/: base.css  index.css
